# api/server/routes/ipsw/routes.go
@@ -7,6 +7,36 @@ import (
 // AddRoutes adds the download routes to the router
 func AddRoutes(rg *gin.RouterGroup) {
 	dl := rg.Group("/ipsw")
+	// swagger:route GET /ipsw/fs/files IPSW getIpswFsFiles
+	//
+	// Files
+	//
+	// Get IPSW Filesystem DMG file listing.
+	//
+	//     Produces:
+	//     - application/json
+	//
+	//     Parameters:
+	//       + name: path
+	//         in: query
+	//         description: path to IPSW
+	//         required: true
+	//         type: string
 	dl.GET("/fs/files", getFsFiles)
+	// swagger:route GET /ipsw/fs/ents IPSW getIpswFsEntitlements
+	//
+	// Entitlements
+	//
+	// Get IPSW Filesystem DMG MachO entitlements.
+	//
+	//     Produces:
+	//     - application/json
+	//
+	//     Parameters:
+	//       + name: path
+	//         in: query
+	//         description: path to IPSW
+	//         required: true
+	//         type: string
 	dl.GET("/fs/ents", getFsEntitlements)
 }
